<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="450dp"
    android:layout_gravity="center"
    android:background="@color/backgroundPopUp"
    android:padding="10dp">

    <Button
        android:id="@+id/closeBtnPopUp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="30dp"
        android:layout_height="30dp"

        android:layout_gravity="end"
        android:fontFamily="casual"
        android:elevation="1dp"
        android:gravity="center"
        android:text="@string/closePopUp"
        android:textColor="@color/textPopUp"
        android:padding="0dp"
        android:textSize="25sp" />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <TextView
            android:id="@+id/textViewOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/titlePopUp"
            android:textColor="@color/textPopUp"
            android:fontFamily="casual"
            android:textSize="20sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textViewOptionNbSign"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:gravity="start|center_vertical"
                    android:text="@string/textViewOptionNbSign"
                    android:fontFamily="casual"
                    android:textColor="@color/textPopUp"
                    android:layout_gravity="center"/>

                <EditText
                    android:id="@+id/editTextOptionNbSign"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:fontFamily="casual"
                    android:ems="2"
                    android:text="@string/optionDefaultNbSign"
                    android:textColor="@color/textPopUp"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textViewOptionRadDeg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="casual"
                    android:gravity="start|center_vertical"
                    android:text="@string/textViewOptionRadDeg"
                    android:textColor="@color/textPopUp"
                    android:layout_gravity="center_vertical"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="2"
                    android:gravity="center">

                    <Switch
                        android:id="@+id/switchOptionRadDeg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center_horizontal" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:fontFamily="casual"
                            android:text="@string/textViewOptionRad"
                            android:textColor="@color/textPopUp"
                            android:layout_gravity="center_vertical"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="casual"
                            android:gravity="end"
                            android:text="@string/textViewOptionDeg"
                            android:textColor="@color/textPopUp"
                            android:layout_gravity="center_vertical"/>
                    </LinearLayout>
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/textViewLanguage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="start|center_vertical"
                    android:text="@string/textViewOptionLanguage"
                    android:fontFamily="casual"
                    android:textColor="@color/textPopUp"
                    android:layout_gravity="center_vertical"/>

                <Spinner
                    android:id="@+id/spinnerLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="200dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/textPopUp"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:entries="@array/languageArray"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</FrameLayout>